# music-remote-control

./: readme.md
.github/workflows/: build.yml
mrc-client/: gradle.properties  package.json  settings.gradle
mrc-client-1/app/: build.gradle
mrc-client-1/app/src/main/res/layout/: activity_main.xml
mrc-client-1/app/src/main/res/values/: themes.xml
mrc-client-1/app/src/main/res/values-night/: themes.xml
mrc-client-1/gradle/: libs.versions.toml
mrc-client-1/gradle/wrapper/: gradle-wrapper.properties
mrc-client/app/: build.gradle  proguard-rules.pro
mrc-client/app/src/main/: AndroidManifest.xml
mrc-client/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  yasio_client.cpp  yasio_client.h
mrc-client/app/src/main/cpp/yasio-4.3.1/: .gitmodules  CHANGELOG.md  README.md  README_EN.md
mrc-client/app/src/main/res/layout/: activity_main.xml
mrc-client/app/src/main/res/values/: strings.xml  themes.xml
mrc-client/app/src/main/res/values-night/: themes.xml
mrc-client/app/src/main/res/xml/: accessibility_service_config.xml
mrc-client/gradle/: libs.versions.toml
mrc-client/gradle/wrapper/: gradle-wrapper.properties
mrc-client/src-tauri/: Cargo.toml  tauri.conf.json
rmc-control/: package-lock.json  package.json  vite.config.ts
rmc-control/src/: App.vue  styles.css
rmc-control/src-tauri/: Cargo.toml  tauri.conf.json
rmc-control/src-tauri/src/: control_service.rs  main.rs  proto.rs
rmc-control/src/components/: MainFrame.vue
rmc-server/: Cargo.toml
rmc-server/src/: main.rs  peer.rs  player.rs  proto.rs
rmc-server/src/net/: tcp_server.rs
(+25 files in other folders)
