[package]
name = "rmc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0.216", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4.0"
async-trait = "0.1.75"
byteorder = "1.5.0"
bytes = { version = "1.5.0", features = [] }
tokio-rustls = { version = "0.23.0" }
rustls-pemfile = { version = "2.1.3" }
tokio_kcp = { git = "https://github.com/tkzcfc/tokio_kcp.git" }
once_cell = "1.19.0"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true        # Strip symbols from binary*
opt-level = "z"  # 最小化二进制文件大小

[target.x86_64-unknown-linux-musl]
rustflags = [
    "-C", "target-feature=+crt-static",
    "-C", "relocation-model=static"
]